refactor: reorganize project packages